[package]
name = "crawler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.2.5"
reqwest = { version = "0.11", features = ["blocking"] }
html_parser = "0.6.2"
url = "2.2"
rand = "0.8.4"
tracing = "0.1"
