[package]
name = "crawler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.12"
url = "2.2"
tracing = "0.1.29"
tracing-subscriber = "0.2"
