[package]
name = "ex12"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
crossterm = { version = "0.21", features = ["event-stream"] }
