[package]
name = "ex06"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.12"
url = "2.2"
anyhow = "1.0"
# html_parser = "0.6.2"
